# zephyr_template

./: .gitignore  README.md
app/: CMakeLists.txt  Kconfig.zephyr  prj.conf  west.yml
app/boards/: nucleo_l476rg.conf  nucleo_l476rg.overlay
app/drivers/: CMakeLists.txt  Kconfig
app/drivers/custom_device/: CMakeLists.txt  Kconfig  custom_device.c
app/dts/bindings/: custom_device.yaml
app/src/: main.c
app/zephyr/: CMakeLists.txt  module.yml
